# c-compiler

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
samples/: basic.c  binary.c  conditional.c  div.c  functions.c  hello_world.c  logical.c  loops.c  unary.c  variables  variables.c
src/: ast.rs  codegen.rs  error.rs  grammar.txt  ir.rs  lexer.rs  lib.rs  llvm_ir.rs  main.rs  semantic.rs  typecheck.rs
src/analysis/: mod.rs  semantic.rs
src/ast/: mod.rs  print.rs  tree.rs
src/codegen/: mod.rs
src/codegen/ir/: ir.rs  mod.rs  tests.rs
src/codegen/x86_64/: mod.rs  tests.rs  x86_64.rs
src/codegen_llvm/: ir.rs
src/driver/: driver.rs  error.rs  mod.rs
src/lexer/: lexer.rs  mod.rs  tests.rs
src/parser/: ast.rs  mod.rs  print.rs  tests.rs
src/semantic/: mod.rs
tests/: basic.rs  llvm.rs
