[package]
name = "c-compiler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rcc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
colog = "1.3.0"
display_tree = "1.1.2"
env_logger = "0.11.5"
log = "0.4.22"
regex = "1.10.5"
serial_test = "3.1.1"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"

