[package]
name = "rcc"
version = "0.1.0"
edition = "2021"

[features]
# Enable the LLVM codegen backend
llvm = ["llvm-sys"]

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
colog = "1.3.0"
env_logger = "0.11.5"
log = "0.4.22"
regex = "1.10.5"
serial_test = "3.1.1"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
llvm-sys = { version = "180", features = ["prefer-dynamic"], optional = true }
cfg-if = "1.0.0"
synoptic = "2.0.4"
lliw = "0.2.0"
thiserror = "1.0.63"
